# palantir

./: .editorconfig  .eslintrc  .gitignore  .pnp.cjs  .prettierrc  .yarnrc.yml  LICENSE  README.md  package.json  tsconfig.json
.webpack/: webpack.config.js
manifest/: chromium.json  firefox.json
res/: base.css  manifest.json  options.html  popup.html
src/: background.ts  content.ts  main.ts  popup.tsx
src/background/: auth.ts  index.ts  logger.ts  media_sync.ts  p2p.ts  packet_bus.ts  packets.ts  peer_connection.ts  session.ts  session_manager.ts  session_server.ts  video_sync.ts
src/background/media_sync/: client.ts  controller.ts  host.ts  logger.ts  packet_handler.ts  server.ts
src/background/session/: client.ts  common.ts  host.ts  index.ts  logger.ts  notifications.ts  server.ts
src/common/: addresses.ts  data_structures.ts  enum_descriptions.ts  event_emitter.ts  events.ts  logger.ts  message_port.ts  messages.ts  queries.ts  streams.ts  typed_events.ts  utils.ts
src/common/components/: icons.tsx
src/content/: controller.ts  index.ts  logger.ts  video_sync.ts
src/frames/: discover.ts  index.ts  logger.ts
src/join/: index.ts
src/options/: index.tsx
src/popup/: Popup.tsx  handle-session.ts  index.tsx  invite-link.ts
src/popup/components/: UserList.tsx  (+4 more)
src/types/: glsl.d.ts  wasm.d.ts
src/window/: index.ts
wasm/: Cargo.toml
wasm-macros/: Cargo.toml
wasm-macros/src/: lib.rs
wasm/src/: console.rs  js_err.rs  lib.rs
wasm/src/eye_renderer/: gl.rs  mod.rs
wasm/src/eye_renderer/shaders/: eye.frag.glsl
webpack/: webpack.config.js
(+3 files in other folders)
