[package]
name = "palantir-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.61"
wasm-bindgen = "0.2.84"
wee_alloc = "0.4.5"
yade = "0.1.2"
palantir-wasm-macros = { path = "../wasm-macros" }

[dependencies.web-sys]
version = "0.3.4"
features = [
    "HtmlCanvasElement",
    "WebGlBuffer",
    "WebGlVertexArrayObject",
    "WebGl2RenderingContext",
    "WebGlProgram",
    "WebGlShader",
    "WebGlUniformLocation",
]
